emby/resilio-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resilio-sync
spec:
  selector:
    matchLabels:
      app: resilio-sync
  template:
    metadata:
      labels:
        app: resilio-sync
    spec:
      containers:
      - name: resilio-sync
        image: lscr.io/linuxserver/resilio-sync:3.0.0
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv-shows
          mountPath: /sync/tv-shows
        - name: movies
          mountPath: /sync/movies
        resources:
          limits:
            memory: "700Mi"
            cpu: "500m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: resilio-pvc
        - name: tv-shows
          nfs:
            server: 10.105.15.20
            path: /mnt/hdd-pool/tv-shows
        - name: movies
          nfs:
            server: 10.105.15.20
            path: /mnt/hdd-pool/movies
